--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 <body>
 	<header>
 		<div id="flag-counter" class="control">10</div>
-		<div class="control"><button id="restart-btn">Restart</button></div>
-		<div class="control"><button id="enable-flag-btn">Enable flag</button></div>
+		<div class="control">
+      <button id="restart-btn" class="square btn">
+        <span id="emoji-cool" class="emoji hidden">&#128526;</span>
+        <span id="emoji-smile" class="emoji">&#128578;</span>
+        <span id="emoji-o" class="emoji hidden">&#128558;</span>
+        <span id="emoji-sad" class="emoji hidden">&#128532;</span>
+      </button>
+    </div>
+		<div class="control"><button id="enable-flag-btn" class="square btn flag-icon"></button></div>
 		<div id="time" class="control">50</div>
   </header>
   <main><div class="container"></div></main>
