--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </button>
     </div>
 		<div class="control"><button id="enable-flag-btn" class="square btn flag-icon"></button></div>
-		<div id="time" class="control">50</div>
+		<div id="stopwatch" class="control">000</div>
   </header>
   <main><div class="container"></div></main>
   <footer>
