--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Minesweeper</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:800" rel="stylesheet">
@@ -22,7 +22,7 @@
 		<div class="control"><button id="enable-flag-btn" class="square btn flag-icon"></button></div>
 		<div id="stopwatch" class="control">000</div>
   </header>
-  <main><div class="container"></div></main>
+  <main><div class="square-container"></div></main>
   <footer>
     <div class="control">
       <button id="showHint" onclick="this.nextSibling.classList.remove('hidden')">?
