Simplify restartBtn emojis

--- a/index.html
+++ b/index.html
@@ -16,16 +16,7 @@
       <header class="side flex-item">
         <div id="flag-counter" class="header-item label">010</div>
         <div class="header-item">
-          <button id="restart-btn" class="square btn">
-            <span id="emoji-cool" class="emoji emoji--cool hidden">
-            </span>
-            <span id="emoji-smile" class="emoji emoji--smile">
-            </span>
-            <span id="emoji-o" class="emoji emoji--o hidden">
-            </span>
-            <span id="emoji-sad" class="emoji emoji--dead hidden">
-            </span>
-          </button>
+          <button id="restart-btn" class="square btn emoji emoji--smile"></button>
         </div>
         <div class="header-item">
           <button id="enable-flag-btn" class="square btn flag-icon"></button>
